Se han cambiado los textos de la pagina web

--- a/index.html
+++ b/index.html
@@ -62,15 +62,10 @@
     <header id="Hero-Section" class="text-light text-end py-5 mt-5">
       <div class="container">
         <div class="ms-auto col-12 col-md-7">
-          <h1 class="display-1 fw-bold my-5">
-            Comidas del fin <br />
-            del mundo
-          </h1>
+          <h1 class="display-1 fw-bold my-5">Diseños del norte de Chile</h1>
           <p class="my-5">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis,
-            accusamus iusto quibusdam dignissimos labore sequi. Cupiditate
-            reiciendis eius dolore, illum adipisci harum voluptas iste mollitia
-            inventore provident labore voluptatum nemo.
+            Te invitamos a disfrutar de los mejores diseños del norte de Chile
+            realizados por Orlando Flores, ven y descubrelos!
           </p>
           <div class="mb-5 pb-5">
             <button class="btn btn-lg btn-outline-info text-light me-4">
@@ -83,52 +78,46 @@
     </header>
 
     <section id="Acerca-de-mi" class="container text-center my-5">
-      <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
+      <h2 class="display-3 fw-bold my-4">Sobre mi</h2>
 
       <p class="my-4">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam
-        distinctio, odit laborum aliquam earum itaque cum sequi, dolorem optio
-        vol
+        Podras observar diversos contenidos variados en torno a diferentes
+        proyectos y especialidades desarrollados a lo largo de los años.
       </p>
 
       <div class="row">
         <div class="col-12 col-md-4">
           <i class="fas fa-camera fa-3x my-3"></i>
-          <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
+          <h3 class="my-3 fw-bold">Ilustraciones</h3>
           <p class="my-3">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
+            Se desarrollaron diversos proyectos fotograficos a lo largo de los
+            años en diferentes partes de Chile para potenciar la marca y el
+            desarrollo individual.
           </p>
         </div>
         <div class="col-12 col-md-4">
           <i class="fas fa-bullhorn fa-3x my-3"></i>
-          <h3 class="my-3 fw-bold">Crítica culinaria</h3>
+          <h3 class="my-3 fw-bold">Metricas y usabilidad</h3>
           <p class="my-3">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
+            Se desarrollaron diversos proyectos de audio a lo largo de los años
+            en diferentes partes de Chile para potenciar la marca y el
+            desarrollo individual.
           </p>
         </div>
         <div class="col-12 col-md-4">
           <i class="far fa-map fa-3x my-3"></i>
-          <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
+          <h3 class="my-3 fw-bold">Visualizacion de datos</h3>
           <p class="my-3">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
+            Se desarrollaron diversos proyectos de visualizacion de datos a lo
+            largo de los años en diferentes partes de Chile para potenciar la
+            marca y el desarrollo individual.
           </p>
         </div>
       </div>
     </section>
 
     <section id="Mis-trabajos" class="my-5 p-5 bg-info">
-      <h2 class="display-4 fw-bold text-center text-light mb-3">
-        Mis trabajos
-      </h2>
+      <h2 class="display-4 fw-bold text-center text-light mb-3">Mis obras</h2>
 
       <div class="row">
         <div class="col-12 col-sm-4 py-2">
@@ -138,12 +127,12 @@
               style="background-image: url(assets/img/card-1.jpg)"
             ></div>
             <div class="card-body">
-              <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
+              <h5 class="card-title fw-bold">Plataforma WEAPP</h5>
               <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Explicabo iure sint, perspiciatis distinctio molestias nihil
-                repudiandae neque rem adipisci repellendus libero illo quo
-                blanditiis, velit quasi ad, recusandae voluptates officia.
+                Este proyecto muestra como se logra mediante investigacion y
+                desarrollo crear un producto que satisface las necesidades de un
+                grupo particular de usuarios y permite construir un producto
+                digital exitoso.
               </p>
               <button type="button" class="btn btn-outline-info">
                 Ver más
@@ -158,12 +147,12 @@
               style="background-image: url(assets/img/card-2.jpg)"
             ></div>
             <div class="card-body">
-              <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
+              <h5 class="card-title fw-bold">Plataforma Betterfly</h5>
               <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
-                consequatur quos error fuga excepturi quo. Laudantium optio
-                pariatur laboriosam modi, ea molestias?
+                Sin dudas este proyecto muestra como se logra mediante
+                investigacion y desarrollo crear un producto que satisface las
+                necesidades de un grupo particular de usuarios y permite
+                construir un producto digital exitoso y de talla mundial.
               </p>
               <button type="button" class="btn btn-outline-info">
                 Ver más
@@ -178,12 +167,12 @@
               style="background-image: url(assets/img/card-3.jpg)"
             ></div>
             <div class="card-body">
-              <h5 class="card-title fw-bold">Salmones de Alaska</h5>
+              <h5 class="card-title fw-bold">Plataforma Constituyente</h5>
               <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                corporis facilis qui architecto dolor, accusamus eveniet
-                exercitationem fugit. Quod autem neque ducimus.
+                Ligado a la coyuntura, sin dudas este proyecto muestra como se
+                logra mediante investigacion y desarrollo crear un producto que
+                satisface las necesidades de un grupo particular de usuarios y
+                permite construir un producto digital exitoso y contingente.
               </p>
               <button type="button" class="btn btn-outline-info">
                 Ver más
@@ -195,13 +184,11 @@
     </section>
 
     <section id="Contacto" class="container my-5">
-      <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
+      <h2 class="display-4 fw-bold text-center my-4">Ponte en contacto</h2>
 
       <p class="text-center my-4 d-none d-md-block">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus
-        sapiente, autem delectus totam expedita animi corporis dolorem qui
-        magnam, aspernatur officiis quasi culpa tempora est commodi. Voluptate
-        beatae tempora quaerat?
+        Si deseas mis servicios o buscas alguna asesoria particular no dudes en
+        contactarme.
       </p>
 
       <form>
@@ -230,7 +217,7 @@
     </section>
 
     <footer class="bg-dark text-center text-light p-4">
-      <p class="mb-0">Olivia Ros 2019. Todos los derechos reservados.</p>
+      <p class="mb-0">Orlando Flores 2023. Todos los derechos reservados.</p>
     </footer>
 
     <script
